Fixes bower formatting.

--- a/bower.json
+++ b/bower.json
@@ -4,7 +4,7 @@
   "description": "Refreshing consumerfinance.gov.",
   "keywords": [
     "cfpb",
-    "consumerfinance.gov"
+    "consumerfinance.gov",
     "capital-framework"
   ],
   "authors": [
