Reworks file and directory structure.

--- a/bower.json
+++ b/bower.json
@@ -46,6 +46,9 @@
     "font-awesome": {
       "css": "css/*.css",
       "fonts": "font/*.*"
+    },
+    "html5shiv": {
+      "js": "dist/html5shiv-printshiv.min.js"
     }
   }
 }
