--- a/.gitignore
+++ b/.gitignore
@@ -7,10 +7,6 @@
 *.o
 *.so
 _site/
-dist/
-src/static/css/*.css
-src/static/fonts
-src/static/js/main*.js
 
 # Packages #
 ############
@@ -50,4 +46,4 @@ node_modules/
 # Bower packages #
 ##################
 bower_components/
-src/vendor/
+vendor/
