--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "grunt-contrib-less": "~0.6.0",
     "grunt-contrib-uglify": "~0.2.2",
     "grunt-contrib-watch": "~0.4.4",
+    "grunt-legacssy": "~0.3.1",
     "grunt-release": "latest",
     "grunt-topdoc": "~0.2.0"
   }
