--- a/bower.json
+++ b/bower.json
@@ -44,6 +44,11 @@
       "fonts": "src/fonts/*.*",
       "js": "src/**/*.js"
     },
+    "chosen": {
+      "css": "chosen.css",
+      "img": "*.png",
+      "js": "chosen.jquery.js"
+    },
     "html5shiv": {
       "js": "dist/html5shiv-printshiv.min.js"
     }
