--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "grunt-contrib-uglify": "~0.2.7",
     "grunt-contrib-watch": "~0.5.3",
     "grunt-legacssy": "~0.3.1",
+    "grunt-string-replace": "~0.2.7",
     "grunt-topdoc": "~0.2.0"
   }
 }
