--- a/_defaults/posts_mappings.json
+++ b/_defaults/posts_mappings.json
@@ -3,7 +3,7 @@
     "title" : {"type" : "string", "store" : "yes"},
     "text" : {"type" : "string", "store" : "yes"},
     "date" : {"type" : "date", "store": "yes"},
-    "category" : {"type":"string", "store": "yes"},
+    "category" : {"type":"string", "index": "not_analyzed"},
     "author" : {"type":"string", "index":"not_analyzed", "analyzer":"keyword"},
     "tags" : {"type":"string", "store": "yes"},
     "excerpt" : {"type":"string", "store": "yes"}
