--- a/_defaults/posts_mappings.json
+++ b/_defaults/posts_mappings.json
@@ -4,8 +4,8 @@
     "text" : {"type" : "string", "store" : "yes"},
     "date" : {"type" : "date", "store": "yes"},
     "category" : {"type":"string", "index": "not_analyzed"},
-    "author" : {"type":"string", "index":"not_analyzed", "analyzer":"keyword"},
-    "tags" : {"type":"string", "store": "yes"},
+    "author" : {"type":"string", "index":"not_analyzed"},
+    "tags" : {"type":"string", "store": "yes", "index":"not_analyzed"},
     "excerpt" : {"type":"string", "store": "yes"}
   }
 }
