--- a/_settings/processors.json.SAMPLE
+++ b/_settings/processors.json.SAMPLE
@@ -1,7 +1,11 @@
 {
   "posts": {
-    "url":       "http://your.wordpress.domain/?json=1",
-    "processor": "wordpress_post_processor",
-    "mappings":  "_defaults/posts_mappings.json"
+    "url"                 : "http://your.wordpress.domain/?json=1",
+    "processor"           : "wordpress_post_processor",
+    "mappings" : "_defaults/posts_mappings.json"
+  },
+  "views": {
+    "url"                 : "http://your.wordpress.domain/?json=1&post_type=view",
+    "processor"           : "wordpress_view_processor"
   }
 }
