--- a/_lib/wordpress_view_processor.py.SAMPLE
+++ b/_lib/wordpress_view_processor.py.SAMPLE
@@ -2,6 +2,7 @@ import sys
 import json
 import requests
 from string import Template
+from wordpress_post_processor import process_post
 
 import dateutil.parser
 
@@ -19,8 +20,6 @@ def posts_at_url(url):
         for p in results['posts']:
             yield p
      
-
-
 def documents(name, url, **kwargs):
     
     for view in posts_at_url(url):
@@ -44,8 +43,13 @@ def process_view(post):
 
     # append the hero information
     hero_id = post['custom_fields']['related_hero'][0]
-    hero_url = "http://your.wordpress.domain/api/get_post/?post_id=" + hero_id + "/?json=1"
+    hero_url = "http://your.wordpress.domain/hero/" + hero_id + "/?json=1"
     response = requests.get(hero_url)
     hero_data = json.loads(response.text)
+    hero_data = hero_data['post']
+    related_post_url = "http://your.wordpress.domain/api/get_post/?post_slug=" + hero_data['custom_fields']['related_post'][0]
+    related_post_response = requests.get(related_post_url)
+    hero_data['related_post'] = process_post(json.loads(related_post_response.text)['post'])
     post['hero'] = hero_data
+
     return post
