--- a/bower.json
+++ b/bower.json
@@ -32,6 +32,7 @@
     "history.js": "~1.8.0",
     "html5shiv": "latest",
     "jquery": "~1.11.0",
+    "jquery.easing": "~1.3.0",
     "normalize-css": "~3.0.0",
     "normalize-legacy-addon": "git://github.com/cfpb/normalize-legacy-addon.git#0.1.0"
   },
@@ -52,6 +53,9 @@
     },
     "html5shiv": {
       "js": "dist/html5shiv-printshiv.min.js"
+    },
+    "jquery.easing": {
+      "js": "js/jquery.easing.js"
     }
   }
 }
