--- a/_defaults/posts_mappings.json
+++ b/_defaults/posts_mappings.json
@@ -6,6 +6,11 @@
     "category" : {"type":"string", "index": "not_analyzed"},
     "author" : {"type":"string", "index":"not_analyzed"},
     "tags" : {"type":"string", "store": "yes", "index":"not_analyzed"},
-    "excerpt" : {"type":"string", "store": "yes"}
+    "excerpt" : {"type":"string", "store": "yes"},
+    "custom_fields": {
+            "properties": {
+                "display_in_newsroom": {"type":"string", "index":"not_analyzed"}
+            }
+    }
   }
 }
