Updated to use cf-core.

--- a/bower.json
+++ b/bower.json
@@ -21,13 +21,12 @@
   "license": "https://github.com/cfpb/cfgov-refresh/blob/master/TERMS.md",
   "dependencies": {
     "cf-buttons": "git://github.com/cfpb/cf-buttons.git",
-    "cf-colors": "git://github.com/cfpb/cf-colors.git",
+    "cf-core": "git://github.com/cfpb/cf-core.git",
     "cf-expandables": "git://github.com/cfpb/cf-expandables.git",
     "cf-forms": "git://github.com/cfpb/cf-forms.git",
     "cf-grid": "git://github.com/cfpb/cf-grid.git",
     "cf-icons": "git://github.com/cfpb/cf-icons.git",
     "cf-pagination": "git://github.com/cfpb/cf-pagination.git",
-    "cf-typography": "git://github.com/cfpb/cf-typography.git",
     "chosen": "https://github.com/harvesthq/chosen/releases/download/v1.1.0/chosen_v1.1.0.zip",
     "history.js": "~1.8.0",
     "html5shiv": "latest",
