--- a/bower.json
+++ b/bower.json
@@ -31,9 +31,7 @@
     "history.js": "~1.8.0",
     "html5shiv": "latest",
     "jquery": "~1.11.0",
-    "jquery.easing": "~1.3.0",
-    "normalize-css": "~3.0.0",
-    "normalize-legacy-addon": "git://github.com/cfpb/normalize-legacy-addon.git#0.1.0"
+    "jquery.easing": "~1.3.0"
   },
   "exportsOverride": {
     "cf-*": {
