--- a/bower.json
+++ b/bower.json
@@ -20,13 +20,13 @@
   },
   "license": "https://github.com/cfpb/cfgov-refresh/blob/master/TERMS.md",
   "dependencies": {
-    "cf-buttons": "git://github.com/cfpb/cf-buttons.git",
-    "cf-core": "git://github.com/cfpb/cf-core.git",
-    "cf-expandables": "git://github.com/cfpb/cf-expandables.git",
-    "cf-forms": "git://github.com/cfpb/cf-forms.git",
-    "cf-grid": "git://github.com/cfpb/cf-grid.git",
-    "cf-icons": "git://github.com/cfpb/cf-icons.git",
-    "cf-pagination": "git://github.com/cfpb/cf-pagination.git",
+    "cf-buttons": "git://github.com/cfpb/cf-buttons.git#1.1.0",
+    "cf-core": "git://github.com/cfpb/cf-core.git#0.3.2",
+    "cf-expandables": "git://github.com/cfpb/cf-expandables.git#0.5.0",
+    "cf-forms": "git://github.com/cfpb/cf-forms.git#1.0.1",
+    "cf-grid": "git://github.com/cfpb/cf-grid.git#0.9.0",
+    "cf-icons": "git://github.com/cfpb/cf-icons.git#0.4.0",
+    "cf-pagination": "git://github.com/cfpb/cf-pagination.git#0.4.0",
     "chosen": "https://github.com/harvesthq/chosen/releases/download/v1.1.0/chosen_v1.1.0.zip",
     "history.js": "~1.8.0",
     "html5shiv": "latest",
