--- a/bower.json
+++ b/bower.json
@@ -31,7 +31,8 @@
     "history.js": "~1.8.0",
     "html5shiv": "latest",
     "jquery": "~1.11.0",
-    "jquery.easing": "~1.3.0"
+    "jquery.easing": "~1.3.0",
+    "string_score": "git://github.com/joshaven/string_score#0.1.20"
   },
   "exportsOverride": {
     "cf-*": {
@@ -53,6 +54,9 @@
     },
     "jquery.easing": {
       "js": "js/jquery.easing.js"
+    },
+    "string_score": {
+        "js": "string_score.js"
     }
   }
 }
