--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "grunt-contrib-watch": "~0.5.3",
     "grunt-legacssy": "~0.3.1",
     "grunt-string-replace": "~0.2.7",
-    "grunt-topdoc": "~0.2.0"
+    "grunt-topdoc": "~0.2.0",
+    "time-grunt": "~1.0.0"
   }
 }
