--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "grunt-autoprefixer": "~0.6.5",
     "grunt-banner": "~0.2.2",
     "grunt-bower-task": "~0.4.0",
+    "grunt-concurrent": "~1.0.0",
     "grunt-contrib-concat": "~0.4.0",
     "grunt-contrib-copy": "~0.5.0",
     "grunt-contrib-cssmin": "~0.9.0",
@@ -15,6 +16,7 @@
     "grunt-legacssy": "~0.3.1",
     "grunt-string-replace": "~0.2.7",
     "grunt-topdoc": "~0.2.0",
+    "load-grunt-tasks": "~0.6.0",
     "time-grunt": "~1.0.0"
   }
 }
