Add slick carousel plugin. Add css and javascript blocks to base template to allow for page-specific code. Add BreakpointHandler functionality to run callbacks on viewport size change. Add mobile-only carousel to bureau landing page. Remove content__max-width class. Update jump-link based expandable header less and move to cf-enhancements.

--- a/bower.json
+++ b/bower.json
@@ -32,7 +32,8 @@
     "html5shiv": "latest",
     "jquery": "~1.11.0",
     "jquery.easing": "~1.3.0",
-    "string_score": "git://github.com/joshaven/string_score#0.1.20"
+    "string_score": "git://github.com/joshaven/string_score#0.1.20",
+    "slick-carousel": "~1.3.7"
   },
   "exportsOverride": {
     "cf-*": {
@@ -56,7 +57,7 @@
       "js": "js/jquery.easing.js"
     },
     "string_score": {
-        "js": "string_score.js"
+      "js": "string_score.js"
     }
   }
 }
