--- a/bower.json
+++ b/bower.json
@@ -21,11 +21,12 @@
   "license": "https://github.com/cfpb/cfgov-refresh/blob/master/TERMS.md",
   "dependencies": {
     "cf-buttons": "git://github.com/cfpb/cf-buttons.git#1.3.0",
-    "cf-core": "git://github.com/cfpb/cf-core.git#0.5.0",
+    "cf-core": "git://github.com/cfpb/cf-core.git#0.7.0",
     "cf-expandables": "git://github.com/cfpb/cf-expandables.git#0.6.1",
     "cf-forms": "git://github.com/cfpb/cf-forms.git#1.1.0",
     "cf-grid": "git://github.com/cfpb/cf-grid.git#0.9.0",
     "cf-icons": "git://github.com/cfpb/cf-icons.git#0.4.0",
+    "cf-layout": "git://github.com/cfpb/cf-layout.git#0.1.0",
     "cf-pagination": "git://github.com/cfpb/cf-pagination.git#0.4.1",
     "chosen": "https://github.com/harvesthq/chosen/releases/download/v1.1.0/chosen_v1.1.0.zip",
     "history.js": "~1.8.0",
