Better styling for leadership calendar print stuff.

--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,7 @@ bower_components/
 # Floobits stuff #
 ##################
 .floo*
+
+# Topdoc stuff #
+##################
+docs/*/pdfreactor-fonts.html
