--- a/_settings/calendar_event_mappings.json
+++ b/_settings/calendar_event_mappings.json
@@ -1,5 +1,8 @@
 {
-  "properties" : {
-    "calendar": {"type":"string", "index": "not_analyzed"}
+  "properties": {
+    "calendar": {
+      "type":  "string",
+      "index": "not_analyzed"
+    }
   }
 }
