switch over ElasticSearch q usage to filters, update mappings

--- a/_settings/orgmember_mappings.json
+++ b/_settings/orgmember_mappings.json
@@ -15,6 +15,10 @@
     "has_parent": {
       "type":  "string",
       "index": "not_analyzed"
+    },
+    "category": {
+      "type": "string",
+      "index": "not_analyzed"
     }
   }
 }
