--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "grunt-contrib-concat": "~0.4.0",
     "grunt-contrib-copy": "~0.5.0",
     "grunt-contrib-cssmin": "~0.9.0",
-    "grunt-contrib-jshint": "~0.6.0",
+    "grunt-eslint": "^7.0.1",
     "grunt-contrib-less": "~0.11.0",
     "grunt-contrib-uglify": "~0.2.7",
     "grunt-contrib-watch": "~0.5.3",
