--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "cfgov-refresh",
-  "version": "0.2.0",
+  "version": "3.0.0-0.2.3",
   "description": "Refreshing consumerfinance.gov.",
   "keywords": [
     "cfpb",
