Ran `yo cf` to update project to match current bureau project organization
- Adds /src and /dist to separate source assets and built assets
- Updates the Gruntfile for new dir org
- Updates the .gitignore for new dir org
- Updates the package.json manifest to include latest tested deps
- Updates the package.json manifest to include project details
- Updates the bower.json manifest to include latest tested deps

NOTE: THIS IS NOT YET TESTED AND READY FOR DEPLOYMENT

--- a/.gitignore
+++ b/.gitignore
@@ -38,25 +38,39 @@ Icon?
 ehthumbs.db
 Thumbs.db
 
-# Grunt.js #
-############
-node_modules/
-.grunt/
-
-# Bower packages #
+# Vim swap files #
 ##################
-bower_components/
-/vendor
-
-# Sheer stuff #
-###############
 *.swp
+
+# Python #
+#################
 *.pyc
+*.egg-info/
+__pycache__/
+*.py[cod]
 .env
 
-# Floobits stuff #
-##################
-.floo*
+# Django #
+#################
+*.egg-info
+.installed.cfg
+
+# Unit test / coverage reports
+#################
+htmlcov/
+.tox/
+.coverage
+.cache
+nosetests.xml
+coverage.xml
+
+# Front-End #
+#############
+node_modules/
+bower_components/
+.grunt/
+src/vendor/
+/dist
 
 # Topdoc stuff #
 ##################
