--- a/bower.json
+++ b/bower.json
@@ -2,32 +2,27 @@
   "name": "cfgov-refresh",
   "version": "3.0.0-0.2.3",
   "description": "Refreshing consumerfinance.gov.",
-  "keywords": [
-    "cfpb",
-    "consumerfinance.gov",
-    "capital-framework"
-  ],
-  "authors": [
-    {
-      "name": "Consumer Financial Protection Bureau",
-      "url": "https://cfpb.github.io/"
-    }
-  ],
   "homepage": "https://github.com/cfpb/cfgov-refresh",
+  "author": {
+    "name": "Consumer Financial Protection Bureau",
+    "email": "tech@cfpb.gov",
+    "url": "https://cfpb.github.io/"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/cfpb/cfgov-refresh.git"
   },
   "license": "https://github.com/cfpb/cfgov-refresh/blob/master/TERMS.md",
   "dependencies": {
-    "cf-buttons": "git://github.com/cfpb/cf-buttons.git#1.3.0",
-    "cf-core": "git://github.com/cfpb/cf-core.git#0.8.0",
-    "cf-expandables": "git://github.com/cfpb/cf-expandables.git#0.6.1",
-    "cf-forms": "git://github.com/cfpb/cf-forms.git#1.1.0",
-    "cf-grid": "git://github.com/cfpb/cf-grid.git#0.9.0",
-    "cf-icons": "git://github.com/cfpb/cf-icons.git#0.4.0",
-    "cf-layout": "git://github.com/cfpb/cf-layout.git#0.2.2",
-    "cf-pagination": "git://github.com/cfpb/cf-pagination.git#0.4.1",
+    "cf-grid": "~0.9.2",
+    "cf-buttons": "~1.4.1",
+    "cf-icons": "~0.5.0",
+    "cf-expandables": "~0.7.0",
+    "cf-forms": "~1.2.0",
+    "cf-layout": "~0.2.2",
+    "cf-pagination": "~0.5.0",
+    "cf-typography": "~0.8.1",
+    "cf-core": "~0.9.0",
     "chosen": "https://github.com/harvesthq/chosen/releases/download/v1.1.0/chosen_v1.1.0.zip",
     "history.js": "~1.8.0",
     "html5shiv": "latest",
@@ -50,6 +45,9 @@
     },
     "history.js": {
       "js": "scripts/bundled-uncompressed/html5/jquery.history.js"
+    },
+    "box-sizing-polyfill": {
+      "js": "boxsizing.htc"
     },
     "html5shiv": {
       "js": "dist/html5shiv-printshiv.min.js"
