--- a/package.json
+++ b/package.json
@@ -2,40 +2,42 @@
   "name": "cfgov-refresh",
   "version": "3.0.0-0.2.3",
   "description": "Refreshing consumerfinance.gov.",
-  "keywords": [
-    "cfpb",
-    "consumerfinance.gov",
-    "capital-framework"
-  ],
-  "authors": [
-    {
-      "name": "Consumer Financial Protection Bureau",
-      "url": "https://cfpb.github.io/"
-    }
-  ],
   "homepage": "https://github.com/cfpb/cfgov-refresh",
+  "author": {
+    "name": "Consumer Financial Protection Bureau",
+    "email": "tech@cfpb.gov",
+    "url": "https://cfpb.github.io/"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/cfpb/cfgov-refresh.git"
   },
   "license": "https://github.com/cfpb/cfgov-refresh/blob/master/TERMS.md",
+  "keywords": [
+    "cfgov-refresh",
+    "cfpb",
+    "consumerfinance.gov",
+    "capital-framework"
+  ],
   "devDependencies": {
-    "cf-component-demo": "git://github.com/cfpb/cf-component-demo.git#0.8.2",
-    "grunt": "~0.4.4",
-    "grunt-autoprefixer": "~0.6.5",
-    "grunt-banner": "~0.2.2",
+    "grunt": "~0.4.5",
+    "grunt-autoprefixer": "~2.0.0",
+    "grunt-banner": "~0.2.3",
     "grunt-bower-task": "~0.4.0",
     "grunt-concurrent": "~1.0.0",
-    "grunt-contrib-concat": "~0.4.0",
-    "grunt-contrib-copy": "~0.5.0",
+    "grunt-contrib-concat": "~0.5.0",
+    "grunt-contrib-copy": "~0.7.0",
     "grunt-eslint": "^7.0.1",
-    "grunt-contrib-less": "~0.11.0",
-    "grunt-contrib-uglify": "~0.2.7",
-    "grunt-contrib-watch": "~0.5.3",
-    "grunt-legacssy": "~0.3.1",
-    "grunt-string-replace": "~0.2.7",
-    "grunt-topdoc": "~0.2.0",
-    "load-grunt-tasks": "~0.6.0",
+    "grunt-contrib-less": "~0.12.0",
+    "grunt-contrib-uglify": "^0.6.0",
+    "grunt-contrib-watch": "~0.6.1",
+    "grunt-legacssy": "~0.4.0",
+    "grunt-string-replace": "~1.0.0",
+    "grunt-topdoc": "~0.3.0",
+    "load-grunt-tasks": "~1.0.0",
     "time-grunt": "~1.0.0"
+  },
+  "scripts": {
+    "postinstall": "bower install && grunt compile-cf"
   }
 }
