Created two new CF jQuery plugins to support validating forms and displaying a message when that validation fails.
cf_formValidator:

- utilizes validate library to handle validation logic.
- tests for passed input types
- returns an object containing the valid and invalid fields
- includes onFailure and onSuccess callbacks for firing events
  after validation (like cf_notifier)
- still need to work out testing forms that require at least one
  input and adding custom tests

cf_notifier:

- uses handlebars as templating engine
- creates a custom notification when passed state and message options
  during a custom event
- adds cf-notifications stylesheet to be ported to CF in the future

form-validation:

- ties cf_formValidation and cf_notifier together
- adds error state to failed input

General

- updated cf-enhancements to include warning states for notifications
  and form input highlights

--- a/package.json
+++ b/package.json
@@ -36,7 +36,11 @@
     "cf-expandables": "./vendor/cf-expandables/cf-expandables.js",
     "chosen": "./vendor/chosen/chosen.jquery.js",
     "requestNextAnimationFrame": "./static/vendor/requestNextAnimationFrame/requestNextAnimationFrame.js",
-    "slick": "./vendor/slick-carousel/slick.min.js"
+    "slick": "./vendor/slick-carousel/slick.min.js",
+    "validate": "./vendor/validate/validate.js"
   },
-  "browserify-shim": "./_settings/browserify-shims.js"
+  "browserify-shim": "./_settings/browserify-shims.js",
+  "dependencies": {
+    "handlebars": "^3.0.3"
+  }
 }
