--- a/bower.json
+++ b/bower.json
@@ -34,7 +34,8 @@
     "jquery": "^1.11.3",
     "jquery.easing": "~1.3.0",
     "string_score": "git://github.com/joshaven/string_score#0.1.20",
-    "slick-carousel": "~1.3.7"
+    "slick-carousel": "~1.3.7",
+    "validate": "~0.7.1"
   },
   "exportsOverride": {
     "cf-*": {
