--- a/_settings/eslint.yaml
+++ b/_settings/eslint.yaml
@@ -1,13 +1,45 @@
+# Enable ecmascript 6 features.
 ecmaFeatures:
-  ecmascript: 6
+  arrowFunctions: false
+  binaryLiterals: false
+  blockBindings: false
+  classes: false
+  defaultParams: false
+  destructuring: false
+  forOf: true
+  generators: false
+  modules: false
+  objectLiteralComputedProperties: false
+  objectLiteralDuplicateProperties: false
+  objectLiteralShorthandMethods: false
+  objectLiteralShorthandProperties: false
+  octalLiterals: false
+  regexUFlag: false
+  regexYFlag: false
+  spread: false
+  superInFunctions: false
+  templateStrings: false
+  unicodeCodePointEscapes: false
+  globalReturn: false
+  jsx: true
+
+parser: espree
 
 env:
   browser: true
   node: true
+  amd: true
+  mocha: true
+  jasmine: false
+  phantomjs: true
+  jquery: false
+  prototypejs: false
+  shelljs: false
+  meteor: false
+  es6: false
 
 globals:
-  jQuery: true
-  $: true
+# No globals outside of env settings.
 
 # Linting rules for ESLint.
 # 0's ignore a rule, 1's produce a warning, and 2's throw an error.
@@ -38,8 +70,14 @@ rules:
   # Enforces flagging use of the debugger.
   no-debugger: 2
 
+  # Disallow duplicate arguments in functions.
+  no-dupe-args: 2
+
   # Disallows duplicate keys when creating object literals.
   no-dupe-keys: 2
+
+  # Disallow a duplicate case label.
+  no-duplicate-case: 2
 
   # Disallows empty statements.
   no-empty: 2
@@ -261,6 +299,7 @@ rules:
     - 1
     -
       terms:
+        - '@todo'
         - todo
         - fixme
         - xxx
@@ -449,8 +488,16 @@ rules:
   # Disallows omission of parentheses when invoking a constructor with no arguments.
   new-parens: 2
 
+  # Disallow an empty newline after var statement.
+  newline-after-var:
+    - 0
+    - always
+
   # Disallows use of the Array constructor.
   no-array-constructor: 2
+
+  # Disallow use of the continue statement.
+  no-continue: 1
 
   # Disallows inline after code.
   no-inline-comments: 1
@@ -490,12 +537,20 @@ rules:
   no-wrap-func: 2
 
   # Disallows multiple var statements per function.
-  one-var: 0
+  one-var:
+    - 0
+    - always
 
   # Requires assignment operator shorthand or prohibit it entirely.
   operator-assignment:
     - 2
     - always
+
+
+  # Enforce operators to be placed before or after line breaks.
+  operator-linebreak:
+    - 1
+    - after
 
   # Enforces padding within blocks.
   padded-blocks:
@@ -563,7 +618,10 @@ rules:
     - always
 
   # Requires spaces around operators.
-  space-infix-ops: 2
+  space-infix-ops:
+    - 2
+    -
+      int32Hint: false
 
   # Requires a space after return, throw, and case.
   space-return-throw-case: 2
@@ -595,6 +653,11 @@ rules:
   generator-star-spacing:
     - 2
     - before
+
+  # Require method and property shorthand syntax for object literals.
+  object-shorthand:
+    - 0
+    - always
 
 
   # Rules for LEGACY SUPPORT.
