--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
     "browserify": "^9.0.3",
     "browserify-shim": "^3.8.6",
     "cf-component-demo": "git://github.com/cfpb/cf-component-demo.git#0.8.2",
+    "chai": "^2.3.0",
     "grunt": "~0.4.5",
     "grunt-autoprefixer": "~0.6.5",
-    "grunt-browserify": "^3.7.0",
     "grunt-banner": "~0.2.2",
     "grunt-bower-task": "~0.4.0",
+    "grunt-browserify": "^3.7.0",
     "grunt-concurrent": "~1.0.0",
     "grunt-contrib-concat": "~0.4.0",
     "grunt-contrib-copy": "~0.5.0",
@@ -19,9 +20,15 @@
     "grunt-contrib-watch": "~0.5.3",
     "grunt-eslint": "^10.0.0",
     "grunt-legacssy": "~0.3.1",
+    "grunt-mocha-istanbul": "^2.4.0",
     "grunt-string-replace": "~0.2.7",
     "grunt-topdoc": "~0.2.0",
+    "istanbul": "^0.3.13",
+    "jquery": "^2.1.4",
+    "jsdom": "^3.1.2",
     "load-grunt-tasks": "~0.6.0",
+    "mocha": "^2.2.4",
+    "mocha-jsdom": "^0.3.0",
     "time-grunt": "~1.0.0",
     "uglifyify": "^3.0.1"
   },
