Updates banner code
- Updates grunt-banner to 0.4.0.
- Updates ascii art to match that in generator-cf yeoman generator.
- Updates bower.json to match generator-cf in respect to banner code.
- Regenerates JS assets.

--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,8 @@
   "authors": [
     {
       "name": "Consumer Financial Protection Bureau",
-      "url": "https://cfpb.github.io/"
+      "email": "tech@cfpb.gov",
+      "homepage": "https://cfpb.github.io/"
     }
   ],
   "homepage": "https://github.com/cfpb/cfgov-refresh",
