--- a/.eslintrc
+++ b/.eslintrc
@@ -212,7 +212,10 @@ rules:
   no-eval: 2
 
   # Disallows adding to native types.
-  no-extend-native: 2
+  no-extend-native:
+    - 2
+    - exceptions:
+        - Array
 
   # Disallows unnecessary function binding.
   no-extra-bind: 2
