--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
   },
   "browserify-shim": "./_settings/browserify-shims.js",
   "dependencies": {
+    "dateformat": "^1.0.11",
     "handlebars": "^3.0.3"
   }
 }
