--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,6 @@ language: python
 
 python:
   - "2.7"
-  - "3.3"
 
 services:
   - elasticsearch
@@ -16,7 +15,7 @@ install:
   - pip install -r sheer/requirements.txt
   - cp .env_SAMPLE .env
   - sheer index
-  - pip install -r _tests/processor_tests/requirements.txt
+  - pip install -r _tests/macro_testing/requirements.txt
 
   # JavaScript test requirements
   - sudo add-apt-repository -y ppa:chris-lea/node.js
@@ -30,5 +29,5 @@ script:
   # Run tests for JavaScript
   - grunt test
 
-  - cd _tests/processor_tests
-  - python test_processors.py
+  - cd _tests/macro_testing
+  - python test_macros.py
